git folder view

--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/suredocr/suredocr.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/suredocr/suredocr.component.html
@@ -64,13 +64,12 @@
                       <td> ganeshris</td>
                       <td >20.10.7</td>
 <td><span class="label label-light-blue">production <span class="badge">12</span></span></td>
-<td *ngFor="let key of getkeys(label)">
-  <span class="label label-light-blue">{{key}}</span>
-  <!-- <span class="label label-light-blue">Seattle</span>
+<td>
+
 <span class="label label-light-blue">Austin</span>
 <span class="label label-light-blue">New York</span>
 <span class="label label-light-blue">Palo Alto</span>
-<span class="label label-light-blue">San Francisco</span> -->
+<span class="label label-light-blue">San Francisco</span>
 </td>
 <td><clr-icon shape="copy"></clr-icon></td>
  </tr> </tbody> </table> </div>
