--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/gitfile/gitfile.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/gitfile/gitfile.component.html
@@ -40,18 +40,7 @@
 
 </clr-button-group>
 </div>
-<div class="btn-group btn-primary">
-  <button class="btn"> New Pull Request</button>
-</div>
-<div class="download">
-<div class="btn-group btn-primary" id="download">
-  <button class="btn"> HTTP</button>
-  <input type="text" value="http://3.109.1.20:3300/ganeshris/Villa.git" class="text">
-  <button class="btn"><clr-icon shape="copy"></clr-icon></button>
-  <button class="btn"> <clr-icon shape="download"></clr-icon></button>
-</div>
 
-</div>
 </div>
 
 
@@ -71,19 +60,14 @@
         <span  class="shortsha">{{gitid.substring(0,12)}}</span>
 
       </a></th>
-      <th class="left">initial <button class="basic compact mini ui icon button commit-button" (click)="toggle()"><clr-icon shape="ellipsis-horizontal"></clr-icon></button>
-        <div *ngIf="showme">
-          {{msg}}
-</div>
-      </th>
-      <th class="right">18 hours</th>
+
     </tr>
   </thead>
   <tbody  >
 
     <tr *ngFor="let user of suregit" >
       <td class="left" *ngIf="user.type === 'tree'"><clr-icon shape="folder"></clr-icon>
-        <a href=""  routerLink="/main/gitfolder">
+        <a href="{{user.url}}">
         {{user.path}}</a></td>
         <td class="left" *ngIf="user.type === 'tree'">initial</td>
         <td class="right" *ngIf="user.type === 'tree'">
@@ -92,7 +76,7 @@
     </tr>
     <tr *ngFor="let user of suregit">
       <td class="left" *ngIf="user.type === 'blob'"><clr-icon shape="file"></clr-icon>
-        <a href="" routerLink="/main/gitfile">
+        <a href="{{user.url}}">
         {{user.path}}</a></td>
       <td class="left" *ngIf="user.type === 'blob'">initial</td>
       <td class="right" *ngIf="user.type === 'blob'">
@@ -102,64 +86,7 @@
   </tbody>
 </table>
 
-<table class="table" id="read">
 
-  <thead>
-    <tr>
-      <th class="left"> <clr-icon shape="file"></clr-icon>README.md</th>
-
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="left"><h1> <clr-icon shape="link"></clr-icon>AstonVillaApp</h1></td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>This project was generated with Angular CLI version 7.1.4.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Development server</h2>
-      </td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>Run ng serve for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Code scaffolding</h2>
-      </td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>Run ng generate component component-name to generate a new component. You can also use ng generate directive|pipe|service|class|guard|interface|enum|module.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Build</h2>
-      </td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>Run ng build to build the project. The build artifacts will be stored in the dist/ directory. Use the --prod flag for a production build.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Running unit tests</h2>
-      </td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>Run ng test to execute the unit tests via Karma.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Running end-to-end tests</h2>
-      </td>
-
-    </tr>
-
-    <tr>
-      <td class="left"><p>Run ng e2e to execute the end-to-end tests via Protractor.</p>
-      <h2> <clr-icon shape="link"></clr-icon>Further help</h2>
-      </td>
-
-    </tr>
-    <tr>
-      <td class="left"><p>To get more help on the Angular CLI use ng help or go check out the Angular CLI README.</p>
-
-      </td>
-
-    </tr>
-  </tbody>
-</table>
 
     </clr-tab-content>
   </clr-tab>
