--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/surefarm/surefarm.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/surefarm/surefarm.component.html
@@ -37,20 +37,22 @@
                     <td> <clr-icon shape="container"></clr-icon><a href=""> {{user.Id.substring(0,12)}} </a><br>{{user.Names}}<br>{{user.Image.substring(0,15)}} </td>
                      <td><clr-icon shape="tree-view"></clr-icon> main<br><>5789987gjyy96763473by</td>
                       <td >{{user.Command.substring(0,19)}}</td>
-                      <td>{{getValues(user.Ports)}}</td>
+                      <td >0.0.0.0:10086-&gt;10086/tcp</td>
+
                       <td>{{user.Status}}</td>
-                      <td ><clr-icon shape="stop"></clr-icon><br>
-                      <br> <span style="padding:20px"><clr-icon shape="lock"></clr-icon></span><clr-icon shape="deploy"></clr-icon></td>
+                      <td ><clr-icon shape="lock"></clr-icon>
+                       <span style="padding:20px"><clr-icon shape="stop" solid style="fill: red;"></clr-icon></span><clr-icon shape="deploy"></clr-icon></td>
                     </tr>
                     <tr>
 
                       <td> <clr-icon shape="container"></clr-icon><a href=""> fc1c9f1fcea1 </a><br>opensure/rubb:2.6 </td>
                        <td><clr-icon shape="tree-view"></clr-icon> main<br><>5789987gjyy96763473by</td>
                         <td >August 20,2021 8:25 PM</td>
-                        <td> August 20,2021 8:25 PM <br>00:23:46 hrs</td>
+
                         <td></td>
-                        <td ><clr-icon shape="play"></clr-icon><br>
-                        <br><span style="padding:20px"> <clr-icon shape="unlock"></clr-icon></span><clr-icon shape="trash"></clr-icon></td>
+                        <td> August 20,2021 8:25 PM <br>00:23:46 hrs</td>
+                        <td ><clr-icon shape="lock"></clr-icon>
+                        <span style="padding:20px"> <clr-icon shape="play" style="color: green;"></clr-icon></span><clr-icon shape="trash"></clr-icon></td>
                       </tr>
  </tbody> </table> </div>
 
