--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -91,6 +91,9 @@
           <a clrVerticalNavLink routerLink="./dragdrop" routerLinkActive="active">
             dragdrop
           </a>
+          <a clrVerticalNavLink routerLink="./drag" routerLinkActive="active">
+            drag
+          </a>
 
 
         </clr-vertical-nav-group-children>
