--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/dragdrop/dragdrop.component.scss
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/dragdrop/dragdrop.component.scss
@@ -3,9 +3,9 @@
 }
 
 .app-droppable{
-  width: 250px;
-  height: 300px;
-  background-color: #f0f0f0;
+  width: 200px;
+  height: auto;
+  background-color: #d6d6db;
   display: inline-block;
   margin:  5px;
   padding: 15px;
@@ -22,11 +22,15 @@
 }
 
 .app-draggable{
-  padding: 15px;
-  background-color: white;
+  top: 0;
+  padding: 0x;
+//width: auto;
+  //background-color: white;
   cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0,0,0,.15);
-  margin-bottom: 15px;
+ // margin-top: .2em;
+  //box-shadow: 0 1px 3px rgba(0,0,0,.15);
+  margin: 0px;
+
 }
 
 .js-app-droppable--target:after,
@@ -42,10 +46,86 @@
 
 .js-app-droppable--target:after{
   border-color: #b6faff;
-  background-color: #f0feff;
+  background-color: #fff5f0;
 }
 
 .js-app-droppable--zone:after{
   border-color: #85ca7f;
   background-color: #ebffe8;
+}
+input[type=text],[type=date], select,textarea {
+  width: 100%;
+  padding: 15px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.required-field{
+  color: red;
+
+}
+.board-wrapper {
+  display: flex;
+  flex-grow: 1;
+
+}
+  .board-columns {
+      display: flex;
+      flex-grow: 1;
+  }
+// img
+
+.avatar{
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  float: left;
+}
+
+.income-msg{
+  display: flex;
+  align-items: center;
+}
+// menu button
+.three-dots:after {
+  cursor: pointer;
+  color:black;
+  content: '\2807';
+  font-size: 20px;
+  padding: 0 5px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(32, 23, 23);
+}
+
+a div {
+  padding: 2px;
+}
+
+.dropdown {
+  position: absolute;
+  right: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 3px 3px rgb(167, 167, 172);
+  outline: none;
+  opacity: 0;
+  z-index: -1;
+  max-height: 0;
+  transition: opacity 0.1s, z-index 0.1s,
+}
+
+.dropdown-container:focus {
+  outline: none;
+}
+
+.dropdown-container:focus .dropdown {
+  opacity: 1;
+  z-index: 100;
+  max-height: 100vh;
+  transition: opacity 0.2s, z-index 0.2s,
 }
