--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/dragdrop/dragdrop.component.scss
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/dragdrop/dragdrop.component.scss
@@ -24,12 +24,14 @@
 .app-draggable{
   top: 0;
   padding: 0x;
+  padding-left: 8px;
 //width: auto;
-  //background-color: white;
+ //background-color: white;
   cursor: pointer;
  // margin-top: .2em;
   //box-shadow: 0 1px 3px rgba(0,0,0,.15);
   margin: 0px;
+
 
 }
 
@@ -55,6 +57,7 @@
 }
 input[type=text],[type=date], select,textarea {
   width: 100%;
+  //height: 20px;
   padding: 15px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -96,8 +99,13 @@ input[type=text],[type=date], select,textarea {
   content: '\2807';
   font-size: 20px;
   padding: 0 5px;
-}
 
+}
+// .three-dots{
+//   position: fixed;
+// top: 0;
+// right: 0;
+// }
 a {
   text-decoration: none;
   color: rgb(32, 23, 23);
@@ -122,10 +130,102 @@ a div {
 .dropdown-container:focus {
   outline: none;
 }
-
+.dropdown-container{
+  float: left;
+}
 .dropdown-container:focus .dropdown {
   opacity: 1;
   z-index: 100;
   max-height: 100vh;
   transition: opacity 0.2s, z-index 0.2s,
+}
+//wizard menu
+label{
+  font-weight: bold;
+}
+
+.container {
+  // height: 100vh;
+  // width: 600px;
+  // margin: auto;
+  // margin-top: 10rem;
+  display: grid;
+  //grid-template-columns: 1fr;
+  //grid-template-rows: 50vh;
+  //align-items: center;
+  //justify-items: center;
+
+  .checkbox-con {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+
+    input[type="checkbox"] {
+      appearance: none;
+      width: 48px;
+      height: 27px;
+      border: 2px solid #1f0d0d;
+      border-radius: 20px;
+      background: gray;
+      position: relative;
+      // transition: all 0.3s ease-in-out;
+      box-sizing: border-box;
+
+      &::before {
+        content: "";
+        width: 14px;
+        height: 14px;
+        background: white;
+        border: 2px solid black;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(13%, 15%);
+        transition: all 0.3s ease-in-out;
+      }
+
+      &::after {
+        //content: url(https://svgshare.com/i/YrQ.svg);
+        position: absolute;
+        top: 0;
+        left: 20px;
+        // transform: translate(90%, 0%);
+        // transition: all 0.3s ease-in-out;
+      }
+
+      &:checked {
+        border: 2px solid #080808;
+        background: white;
+        // transition: all 0.3s ease-in-out;
+
+        &::before {
+          background: gray;
+          border: 2px solid black;
+          transform: translate(133%, 13%);
+          transition: all 0.3s ease-in-out;
+        }
+
+        &::after {
+          //content: url(https://svgshare.com/i/Yr4.svg);
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          // transform: translate(40%, 30%);
+          // transition: all 0.3s ease-in-out;
+        }
+      }
+    }
+
+    label {
+      margin-left: 10px;
+    }
+  }
+}
+.text{
+  color: blue;
+}
+.line{
+  border-bottom: 1px solid black;
+padding-bottom: 5px;
 }
