--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -94,6 +94,9 @@
           <a clrVerticalNavLink routerLink="./drag" routerLinkActive="active">
             drag
           </a>
+          <a clrVerticalNavLink routerLink="./formio" routerLinkActive="active">
+            formio
+          </a>
 
 
         </clr-vertical-nav-group-children>
