drag drop new done

--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -97,6 +97,9 @@
           <a clrVerticalNavLink routerLink="./formio" routerLinkActive="active">
             formio
           </a>
+          <a clrVerticalNavLink routerLink="./formdrag" routerLinkActive="active">
+            formdrag
+          </a>
 
 
         </clr-vertical-nav-group-children>
