--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/drag/drag.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/drag/drag.component.html
@@ -1,34 +1,5 @@
-
-<div class="root">
-
-
-  <div class="board">
-
-
-
-    <div class="board-wrapper">
-
-      <div class="board-columns" cdkDropListGroup>
-        <div class="board-column" *ngFor="let column of board.columns">
-
-          <div class="column-title">
-            {{ column.name }}
-          </div>
-
-          <div class="tasks-container"
-          cdkDropList
-          [cdkDropListData]="column.tasks"
-          (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let item of column.tasks" cdkDrag>
-              {{ item }}
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-  </div>
-
+<div >
+  <iframe [src]="safeurl" allowfullscreen width="1300px" height="600px" ></iframe>
 </div>
+
+
