--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/formio/formio.component.scss
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/formio/formio.component.scss
@@ -1,119 +1,187 @@
-/* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
-
-.clearfix{clear:both;}
-.pointer{cursor: pointer;}
-.ucfirst{text-transform: capitalize;}
-.min300{min-height:300px}
-.app-box{
-    padding: 10px;
-    margin-bottom:20px;
-    height: 230px;
-    background: #b5e8d4;
-    overflow: hidden;
-    box-shadow: 1px 1px 4px #ccc;
-}
-.app-box:hover{
-    box-shadow: 1px 1px 4px #999;
-}
-.app-box .remove{
-    position: absolute;
-    right: 21px;
-    top: 0px;
-    color: #545454;
-    display:none;
-}
-.app-box:hover .remove{
-    display:block;
-}
-.inline-btn{
-    background: #00b970;
-    padding: 1px 5px;
-    color: white;
-    display: inline-block;
-    margin-bottom: 5px;
-}
-.box{
-    padding: 10px;
-    margin-bottom:10px;
-    overflow: auto;
-    box-shadow: 1px 1px 4px #ddd;
-}
-.form-group .form-control{
-    font-size:inherit;
-    background-color: inherit;
+.root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.dndDropArea{
-    padding: 10px;
-    /* border: dotted #ddd 2px; */
+.app-name {
+  font-size: 28px;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
 }
 
-.dndDropArea.empty{
-    min-height:200px;
-    border: dotted #ddd 2px;
+.has-gradient-text {
+  background: -webkit-linear-gradient(#13f7f4, #2af598);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.field{
-    padding:5px;
-    margin-bottom:10px;
-    position: relative;
+
+.board {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
+  // Override Automatic Minimum Size
+  // https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size
+  min-width: 0;
+  min-height: 0;
+
+  .board-bar {
+
+      background: rgba(gray, 0.5);
+      padding: 8px 15px;
+
+      .board-name {
+          font-size: 20px;
+          font-weight: bold;
+          color: white;
+      }
+  }
+
+  .board-wrapper {
+      display: flex;
+      flex-grow: 1;
+      overflow-x: auto;
+
+      .board-columns {
+          display: flex;
+          flex-grow: 1;
+
+          .board-column {
+              display: flex;
+              flex-direction: column;
+              flex-grow: 1;
+              flex-basis: 0; // to force the columns to all be the same size, regardless of content
+
+              min-width: 300px;
+              margin: 50px;
+              padding: 25px;
+
+              border-radius: 4px;
+
+              background: rgba(rgb(185, 176, 176), 0.5);
+
+              &:not(:first-child) {
+                  margin-left: 0;
+              }
+
+              .column-title {
+                  font-size: 20px;
+                  font-weight: 800;
+                  font-family: 'Lato', sans-serif;
+                  text-transform: uppercase;
+                  margin-bottom: 20px;
+              }
+          }
+      }
+  }
 }
-.field:hover{
-    box-shadow: 1px 1px 4px #ddd;
+
+
+.tasks-container {
+  flex-grow: 1;
+  overflow-y: auto;
 }
-.toggle-Wrapper{
-    padding: 15px;
-    background: #d6d6d629;
+
+.task {
+
+  display: flex;
+  padding: 15px 12px;
+  background: white;
+  border-bottom: solid 1px #ddd;
+  border-radius: 4px;
+
+  margin-bottom: 15px;
+
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
+  0 3px 14px 2px rgba(0, 0, 0, 0.05);
 }
-.dndHandle{
-    cursor: pointer;
-    color: #999;
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
-.dndDraggingSource{
-    opacity:0.3;
+
+.cdk-drag-placeholder {
+  opacity: 0;
 }
-.dndPlaceholder{
-    background: rgb(206, 238, 238); border-radius: 2px; padding: 20px;
-    margin-bottom:10px;
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-.field .fa{
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    font-size: 24px;
-    vertical-align: middle;
+
+.tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+
+//try
+
+
+// img
+
+.avatar{
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  float: left;
+}
+
+.income-msg{
+  display: flex;
+  align-items: center;
+}
+// menu button
+.three-dots:after {
+  cursor: pointer;
+  color:black;
+  content: '\2807';
+  font-size: 20px;
+  padding: 0 5px;
 
 }
-.red{color:#d9534f}
-.fa-trash{color:#d9534f}
-.marginT60{
-    margin-top:60px;
+// .three-dots{
+//   position: fixed;
+// top: 0;
+// right: 0;
+// }
+a {
+  text-decoration: none;
+  color: rgb(32, 23, 23);
 }
 
-.color-red{color:red;}
-.report-block{
-    padding:10px;
-    background:#f8f8f8;
-    margin-bottom:20px;
-}
-.report-block .row:nth-child(even){
-    background:#fff;
+a div {
+  padding: 2px;
 }
 
-.ftheme{
-    width:100%;
+.dropdown {
+  position: absolute;
+  right: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 3px 3px rgb(167, 167, 172);
+  outline: none;
+  opacity: 0;
+  z-index: -1;
+  max-height: 0;
+  transition: opacity 0.1s, z-index 0.1s,
 }
 
-.dndDropArea .field .fa{
-    opacity:0;
+.dropdown-container:focus {
+  outline: none;
 }
-.dndDropArea .field:hover .fa{
-    opacity:1;
+.dropdown-container{
+  float: left;
+}
+.dropdown-container:focus .dropdown {
+  opacity: 1;
+  z-index: 100;
+  max-height: 100vh;
+  transition: opacity 0.2s, z-index 0.2s,
 }
 
-.colorpick{
-    height: 25px;
-    background: white;
-    border: none;
-}
