--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/formio/formio.component.scss
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/formio/formio.component.scss
@@ -185,3 +185,249 @@ a div {
   transition: opacity 0.2s, z-index 0.2s,
 }
 
+.required-field{
+  color: red;
+}
+
+
+// CSS of raise issue modal
+
+*, *:after, *:before{
+  box-sizing: content-box;
+}
+
+.app-droppable{
+  width: 200px;
+  height: auto;
+  background-color: #d6d6db;
+  color: #080808;
+  display: inline-block;
+  margin:  5px;
+  padding: 15px;
+  border-radius: 4px;
+  position: relative;
+  vertical-align: middle;
+}
+
+.app-droppable:after {
+  content: '';
+  display: block;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.app-draggable{
+  top: 0;
+  padding: 0x;
+  padding-left: 8px;
+//width: auto;
+ background-color: white;
+  cursor: pointer;
+ // margin-top: .2em;
+  //box-shadow: 0 1px 3px rgba(0,0,0,.15);
+  margin: 0px;
+
+
+}
+
+.js-app-droppable--target:after,
+.js-app-droppable--zone:after{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-width: 2px;
+  border-style: dashed;
+}
+
+.js-app-droppable--target:after{
+  border-color: #b6faff;
+  background-color: #fff5f0;
+}
+
+.js-app-droppable--zone:after{
+  border-color: #85ca7f;
+  background-color: #ebffe8;
+}
+input[type=text],[type=date], select,textarea {
+  width: 100%;
+  //height: 20px;
+  padding: 15px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.required-field{
+  color: red;
+
+}
+.board-wrapper {
+  display: flex;
+  flex-grow: 1;
+  //overflow-x: auto;
+}
+  .board-columns {
+      display: flex;
+      flex-grow: 1;
+  }
+// img
+
+.avatar{
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  float: left;
+}
+
+.income-msg{
+  display: flex;
+  align-items: center;
+}
+// menu button
+.three-dots:after {
+  cursor: pointer;
+  color:black;
+  content: '\2807';
+  font-size: 20px;
+  padding: 0 5px;
+
+}
+// .three-dots{
+//   position: fixed;
+// top: 0;
+// right: 0;
+// }
+a {
+  text-decoration: none;
+  color: rgb(32, 23, 23);
+}
+
+a div {
+  padding: 2px;
+}
+
+.dropdown {
+  position: absolute;
+  right: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 3px 3px rgb(167, 167, 172);
+  outline: none;
+  opacity: 0;
+  z-index: -1;
+  max-height: 0;
+  transition: opacity 0.1s, z-index 0.1s,
+}
+
+.dropdown-container:focus {
+  outline: none;
+}
+.dropdown-container{
+  float: left;
+}
+.dropdown-container:focus .dropdown {
+  opacity: 1;
+  z-index: 100;
+  max-height: 100vh;
+  transition: opacity 0.2s, z-index 0.2s,
+}
+//wizard menu
+label{
+  font-weight: bold;
+}
+
+.container {
+  // height: 100vh;
+  // width: 600px;
+  // margin: auto;
+  // margin-top: 10rem;
+  display: grid;
+  //grid-template-columns: 1fr;
+  //grid-template-rows: 50vh;
+  //align-items: center;
+  //justify-items: center;
+
+  .checkbox-con {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+
+    input[type="checkbox"] {
+      appearance: none;
+      width: 48px;
+      height: 27px;
+      border: 2px solid #1f0d0d;
+      border-radius: 20px;
+      background: gray;
+      position: relative;
+      // transition: all 0.3s ease-in-out;
+      box-sizing: border-box;
+
+      &::before {
+        content: "";
+        width: 14px;
+        height: 14px;
+        background: white;
+        border: 2px solid black;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(13%, 15%);
+        transition: all 0.3s ease-in-out;
+      }
+
+      &::after {
+        //content: url(https://svgshare.com/i/YrQ.svg);
+        position: absolute;
+        top: 0;
+        left: 20px;
+        // transform: translate(90%, 0%);
+        // transition: all 0.3s ease-in-out;
+      }
+
+      &:checked {
+        border: 2px solid #080808;
+        background: white;
+        // transition: all 0.3s ease-in-out;
+
+        &::before {
+          background: gray;
+          border: 2px solid black;
+          transform: translate(133%, 13%);
+          transition: all 0.3s ease-in-out;
+        }
+
+        &::after {
+          //content: url(https://svgshare.com/i/Yr4.svg);
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          // transform: translate(40%, 30%);
+          // transition: all 0.3s ease-in-out;
+        }
+      }
+    }
+
+    label {
+      margin-left: 10px;
+    }
+  }
+}
+.text{
+  color: blue;
+}
+.line{
+  border-bottom: 1px solid black;
+padding-bottom: 5px;
+}
+//title
+.title{
+  opacity: 0;
+}
+.title:hover{
+  opacity: 1;
+}
